[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multek-agno"
version = "0.1.0"
description = "Reusable toolkits, guardrails, and hooks for the Agno Agents SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Multek" }]
keywords = ["agno", "agents", "llm", "toolkits", "guardrails", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["agno>=2.5.0"]

[project.urls]
Homepage = "https://github.com/multek/multek-agno"
Repository = "https://github.com/multek/multek-agno"
Issues = "https://github.com/multek/multek-agno/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"multek_agno.skills._bundled" = ["**/*.md", "**/*.py", "**/*.sh", "**/*.txt", "**/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
